--- a/src/app/pages/inbox/inbox.component.html
+++ b/src/app/pages/inbox/inbox.component.html
@@ -5,7 +5,7 @@
             <p>{{mail.from}}</p>
             <p>{{mail.title}}</p>
             <p>{{mail.date}}</p>
-            <a [routerLink]="['/detail', mail.id]">See Detail</a>
+            <a [routerLink]="['/details', mail.id]">See Detail</a>
             <span>Del</span>
         </li>
     </ul>
