w.i.p: add simple mobx support to the app

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,11 @@
 <div>
   <header class="home-page-header">
     <div class="header-left">
-      Welcome {{ username }} , please check <a routerLink="/inbox">Inbox</a>
+      Welcome <span>{{ username }}</span
+      >, please check <a routerLink="/inbox">Inbox</a>
     </div>
     <div class="header-right">
+      <input placeholder="new name" (keyup)="onNewNameKey($event)"/>
       <button class="update-user-btn" (click)="updateStore()">
         Change User Name</button
       ><a href="http://localhost:9000/app1">App1</a>
